--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@angular/compiler-cli": "^17.3.0",
     "@chromatic-com/storybook": "^1.5.0",
     "@compodoc/compodoc": "^1.1.25",
+    "@ngrx/eslint-plugin": "^17.2.0",
+    "@playwright/test": "^1.44.1",
     "@storybook/addon-docs": "^8.1.10",
     "@storybook/addon-essentials": "^8.1.10",
     "@storybook/addon-interactions": "^8.1.10",
@@ -47,6 +49,7 @@
     "@storybook/blocks": "^8.1.10",
     "@storybook/test": "^8.1.10",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.14.4",
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
     "angular-eslint": "^18.0.1",
@@ -62,7 +65,6 @@
     "postcss": "^8.4.38",
     "storybook": "^8.1.10",
     "tailwindcss": "^3.4.4",
-    "typescript": "~5.4.2",
-    "@ngrx/eslint-plugin": "^17.2.0"
+    "typescript": "~5.4.2"
   }
 }
