--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
-    "storybook": "ng run todo:storybook",
-    "build-storybook": "ng run todo:build-storybook"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -37,17 +35,9 @@
     "@angular-eslint/template-parser": "^17.5.2",
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.0",
-    "@chromatic-com/storybook": "^1.5.0",
     "@compodoc/compodoc": "^1.1.25",
     "@ngrx/eslint-plugin": "^17.2.0",
     "@playwright/test": "^1.44.1",
-    "@storybook/addon-docs": "^8.1.10",
-    "@storybook/addon-essentials": "^8.1.10",
-    "@storybook/addon-interactions": "^8.1.10",
-    "@storybook/addon-links": "^8.1.10",
-    "@storybook/angular": "^8.1.10",
-    "@storybook/blocks": "^8.1.10",
-    "@storybook/test": "^8.1.10",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.14.4",
     "@typescript-eslint/eslint-plugin": "7.11.0",
@@ -55,7 +45,6 @@
     "angular-eslint": "^18.0.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-plugin-storybook": "^0.8.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -63,7 +52,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.38",
-    "storybook": "^8.1.10",
     "tailwindcss": "^3.4.4",
     "typescript": "~5.4.2"
   }
